--- a/ansible/playbooks/service/simplesamlphp.yml
+++ b/ansible/playbooks/service/simplesamlphp.yml
@@ -66,10 +66,12 @@
         - '{{ ldap__python__dependent_packages3 }}'
         - '{{ mariadb__python__dependent_packages3 }}'
         - '{{ nginx__python__dependent_packages3 }}'
+        - '{{ simplesamlphp__python__dependent_packages3 }}'
       python__dependent_packages2:
         - '{{ ldap__python__dependent_packages2 }}'
         - '{{ mariadb__python__dependent_packages2 }}'
         - '{{ nginx__python__dependent_packages2 }}'
+        - '{{ simplesamlphp__python__dependent_packages2 }}'
 
     - role: ldap
       tags: [ 'role::ldap', 'skip::ldap' ]
@@ -81,9 +83,11 @@
 
     - role: mariadb
       tags: [ 'role::mariadb', 'skip::mariadb' ]
+      mariadb__dependent_databases:
+        - '{{ simplesamlphp__mariadb__dependent_databases }}'
       mariadb__dependent_users:
         - '{{ simplesamlphp__mariadb__dependent_users }}'
-      when: simplesamlphp__mariadb
+      when: simplesamlphp__mariadb_enabled|bool
 
     - role: php
       tags: [ 'role::php', 'skip::php' ]
