--- a/ansible/roles/simplesamlphp/defaults/main/dependent.yml
+++ b/ansible/roles/simplesamlphp/defaults/main/dependent.yml
@@ -13,6 +13,14 @@ simplesamlphp__keyring__dependent_gpg_keys:
     home: '{{ simplesamlphp__home }}'
     id: '{{ simplesamlphp__upstream_git_gpg_key }}'
 
+simplesamlphp__python__dependent_packages3:
+
+  - 'python3-cryptography'
+
+simplesamlphp__python__dependent_packages2:
+
+  - 'python-cryptography'
+
 simplesamlphp__ldap__dependent_tasks:
 
   - name: 'Create SimpleSAMLphp account for {{ simplesamlphp__ldap_device_dn | join(",") }}'
@@ -23,6 +31,10 @@ simplesamlphp__ldap__dependent_tasks:
                 if (simplesamlphp__ldap_enabled|bool and
                     simplesamlphp__ldap_device_dn|d())
                 else "ignore" }}'
+
+simplesamlphp__mariadb__dependent_databases:
+
+  - name: '{{ simplesamlphp__mariadb_database }}'
 
 simplesamlphp__mariadb__dependent_users:
 
@@ -41,6 +53,14 @@ simplesamlphp__nginx__dependent_servers:
     webroot_create: False
     type: 'php'
     php_upstream: 'php_simplesamlphp'
+    location_list:
+      - pattern: '= /.well-known/openid-configuration'
+        options: |
+          rewrite ^(.*)$ /module.php/oidc/openid-configuration.php break;
+          proxy_pass https://{{ simplesamlphp__fqdn }};
+        state: 'present'
+      - pattern: '/'
+        options: 'try_files $uri $uri/ $uri.php;'
 
 simplesamlphp__nginx__dependent_upstreams:
 
@@ -52,15 +72,19 @@ simplesamlphp__nginx__dependent_upstreams:
 simplesamlphp__php__dependent_packages:
 
   - '{{ [ "gmp" ]
-        if "simplesamlphp/simplesamlphp-module-webauthn" in simplesamlphp__modules_active
+        if "simplesamlphp/simplesamlphp-module-webauthn" in simplesamlphp__active_modules
         else [] }}'
   - 'json'
   - 'ldap'
   - 'mbstring'
+  - '{{ [ "memcached" ]
+        if (ansible_local.memcached.installed|d())|bool
+        else [] }}'
   - '{{ [ "mysql" ]
-        if simplesamlphp__mariadb
+        if simplesamlphp__mariadb_enabled|bool
         else [] }}'
   - 'xml'
+  - 'zip'
 
 simplesamlphp__php__dependent_pools:
 
