--- a/requirements.yml
+++ b/requirements.yml
@@ -10,7 +10,8 @@
 collections:
   - 'ansible.posix'
   - 'community.crypto'
-  - 'community.general'
+  - name: community.general
+    version: '>=0.2.0'
   - 'community.libvirt'
   - 'community.mysql'
   - 'community.postgresql'
