--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -13,3 +13,5 @@ jobs:
       - name: Run ansible-lint
         # Use @main due https://github.com/ansible/ansible-lint/discussions/1403#discussioncomment-2654415
         uses: ansible-community/ansible-lint-action@main
+        with:
+          path: "ansible/*"
