--- a/ansible/playbooks/service/apparmor.yml
+++ b/ansible/playbooks/service/apparmor.yml
@@ -1,12 +1,10 @@
 ---
 # Copyright (C) 2015-2017 Robin Schneider <ypid@riseup.net>
-# Copyright (C) 2022 David Härdeman <david@hardeman.nu>
-# Copyright (C) 2015-2022 DebOps <https://debops.org/>
+# Copyright (C) 2022      David Härdeman <david@hardeman.nu>
+# Copyright (C) 2015-2023 DebOps <https://debops.org/>
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 - name: Install and configure AppArmor
-  collections: [ 'debops.debops', 'debops.roles01',
-                 'debops.roles02', 'debops.roles03' ]
   hosts: [ 'debops_all_hosts', 'debops_service_apparmor' ]
   become: True
 
@@ -14,7 +12,9 @@
                    | combine(inventory__group_environment | d({}))
                    | combine(inventory__host_environment  | d({})) }}'
 
-  roles:
+  tasks:
 
-    - role: apparmor
+    - name: Configure AppArmor subsystem
+      ansible.builtin.import_role:
+        name: 'debops.debops.apparmor'
       tags: [ 'role::apparmor', 'skip::apparmor' ]
