--- a/ansible/playbooks/service/apt.yml
+++ b/ansible/playbooks/service/apt.yml
@@ -1,12 +1,10 @@
 ---
-# Copyright (C) 2013-2018 Maciej Delmanowski <drybjed@gmail.com>
+# Copyright (C) 2013-2023 Maciej Delmanowski <drybjed@gmail.com>
 # Copyright (C) 2015-2017 Robin Schneider <ypid@riseup.net>
-# Copyright (C) 2014-2018 DebOps <https://debops.org/>
+# Copyright (C) 2014-2023 DebOps <https://debops.org/>
 # SPDX-License-Identifier: GPL-3.0-only
 
 - name: Manage Advanced Package Manager
-  collections: [ 'debops.debops', 'debops.roles01',
-                 'debops.roles02', 'debops.roles03' ]
   hosts: [ 'debops_all_hosts', 'debops_service_apt' ]
   become: True
 
@@ -14,7 +12,9 @@
                    | combine(inventory__group_environment | d({}))
                    | combine(inventory__host_environment  | d({})) }}'
 
-  roles:
+  tasks:
 
-    - role: apt
+    - name: Configre APT package manager
+      ansible.builtin.import_role:
+        name: 'debops.debops.apt'
       tags: [ 'role::apt', 'skip::apt' ]
