--- a/ansible/playbooks/service/apt_cacher_ng.yml
+++ b/ansible/playbooks/service/apt_cacher_ng.yml
@@ -1,11 +1,10 @@
 ---
 # Copyright (C) 2016-2017 Robin Schneider <ypid@riseup.net>
-# Copyright (C) 2016-2017 DebOps <https://debops.org/>
+# Copyright (C) 2023      Maciej Delmanowski <drybjed@gmail.com>
+# Copyright (C) 2016-2023 DebOps <https://debops.org/>
 # SPDX-License-Identifier: GPL-3.0-only
 
 - name: Install and manage the caching HTTP proxy Apt-Cacher NG.
-  collections: [ 'debops.debops', 'debops.roles01',
-                 'debops.roles02', 'debops.roles03' ]
   hosts: [ 'debops_service_apt_cacher_ng' ]
   become: True
 
@@ -13,43 +12,59 @@
                    | combine(inventory__group_environment | d({}))
                    | combine(inventory__host_environment  | d({})) }}'
 
-  roles:
+  vars:
+    keyring__dependent_apt_keys:
+      - '{{ nginx__keyring__dependent_apt_keys }}'
+    etc_services__dependent_list:
+      - '{{ apt_cacher_ng__etc_services__dependent_list }}'
+    apt_preferences__dependent_list:
+      - '{{ apt_cacher_ng__apt_preferences__dependent_list }}'
+      - '{{ nginx_apt_preferences_dependent_list }}'
+    ferm__dependent_rules:
+      - '{{ apt_cacher_ng__ferm__dependent_rules }}'
+      - '{{ nginx_ferm_dependent_rules }}'
+    python__dependent_packages3:
+      - '{{ nginx__python__dependent_packages3 }}'
+    python__dependent_packages2:
+      - '{{ nginx__python__dependent_packages2 }}'
+    nginx_servers:
+      - '{{ apt_cacher_ng__nginx__servers }}'
+    nginx_upstreams:
+      - '{{ apt_cacher_ng__nginx__upstream }}'
 
-    - role: keyring
+  tasks:
+
+    - name: Apply keyring configuration for php environment
+      ansible.builtin.import_role:
+        name: 'debops.debops.keyring'
       tags: [ 'role::keyring', 'skip::keyring', 'role::nginx' ]
-      keyring__dependent_apt_keys:
-        - '{{ nginx__keyring__dependent_apt_keys }}'
 
-    - role: etc_services
+    - name: Configure /etc/services database
+      ansible.builtin.import_role:
+        name: 'debops.debops.etc_services'
       tags: [ 'role::etc_services', 'skip::etc_services' ]
-      etc_services__dependent_list:
-        - '{{ apt_cacher_ng__etc_services__dependent_list }}'
 
-    - role: apt_preferences
+    - name: Configure APT preferences
+      ansible.builtin.import_role:
+        name: 'debops.debops.apt_preferences'
       tags: [ 'role::apt_preferences', 'skip::apt_preferences' ]
-      apt_preferences__dependent_list:
-        - '{{ apt_cacher_ng__apt_preferences__dependent_list }}'
-        - '{{ nginx_apt_preferences_dependent_list }}'
 
-    - role: ferm
+    - name: Configure ferm firewall
+      ansible.builtin.import_role:
+        name: 'debops.debops.ferm'
       tags: [ 'role::ferm', 'skip::ferm' ]
-      ferm__dependent_rules:
-        - '{{ apt_cacher_ng__ferm__dependent_rules }}'
-        - '{{ nginx_ferm_dependent_rules }}'
 
-    - role: python
+    - name: Configure Python runtime environment
+      ansible.builtin.import_role:
+        name: 'debops.debops.python'
       tags: [ 'role::python', 'skip::python' ]
-      python__dependent_packages3:
-        - '{{ nginx__python__dependent_packages3 }}'
-      python__dependent_packages2:
-        - '{{ nginx__python__dependent_packages2 }}'
 
-    - role: nginx
+    - name: Install and configure nginx webserver
+      ansible.builtin.import_role:
+        name: 'debops.debops.nginx'
       tags: [ 'role::nginx', 'skip::nginx' ]
-      nginx_servers:
-        - '{{ apt_cacher_ng__nginx__servers }}'
-      nginx_upstreams:
-        - '{{ apt_cacher_ng__nginx__upstream }}'
 
-    - role: apt_cacher_ng
+    - name: Install and configure APT Cacher NG
+      ansible.builtin.import_role:
+        name: 'debops.debops.apt_cacher_ng'
       tags: [ 'role::apt_cacher_ng', 'skip::apt_cacher_ng' ]
