--- a/ansible/playbooks/service/php.yml
+++ b/ansible/playbooks/service/php.yml
@@ -1,12 +1,10 @@
 ---
 # Copyright (C) 2016      Mariano Barcia <mariano.barcia@gmail.com>
-# Copyright (C) 2016-2019 Maciej Delmanowski <drybjed@gmail.com>
-# Copyright (C) 2016-2019 DebOps <https://debops.org/>
+# Copyright (C) 2016-2023 Maciej Delmanowski <drybjed@gmail.com>
+# Copyright (C) 2016-2023 DebOps <https://debops.org/>
 # SPDX-License-Identifier: GPL-3.0-only
 
 - name: Install and manage PHP environment
-  collections: [ 'debops.debops', 'debops.roles01',
-                 'debops.roles02', 'debops.roles03' ]
   hosts: [ 'debops_service_php' ]
   become: True
 
@@ -14,36 +12,43 @@
                    | combine(inventory__group_environment | d({}))
                    | combine(inventory__host_environment  | d({})) }}'
 
-  pre_tasks:
+  vars:
+    keyring__dependent_apt_keys:
+      - '{{ php__keyring__dependent_apt_keys }}'
+    apt_preferences__dependent_list:
+      - '{{ php__apt_preferences__dependent_list }}'
+    logrotate__dependent_config:
+      - '{{ php__logrotate__dependent_config }}'
+
+  tasks:
 
     - name: Apply keyring configuration for php environment
       ansible.builtin.import_role:
-        name: 'keyring'
-      vars:
-        keyring__dependent_apt_keys:
-          - '{{ php__keyring__dependent_apt_keys }}'
+        name: 'debops.debops.keyring'
       tags: [ 'role::keyring', 'skip::keyring', 'role::php' ]
 
     - name: Prepare php environment
       ansible.builtin.import_role:
-        name: 'php'
+        name: 'debops.debops.php'
         tasks_from: 'main_env'
       tags: [ 'role::php', 'role::php:env', 'role::logrotate' ]
 
-  roles:
-
-    - role: apt_preferences
+    - name: Configure APT preferences
+      ansible.builtin.import_role:
+        name: 'debops.debops.apt_preferences'
       tags: [ 'role::apt_preferences', 'skip::apt_preferences' ]
-      apt_preferences__dependent_list:
-        - '{{ php__apt_preferences__dependent_list }}'
 
-    - role: cron
+    - name: Configure cron service
+      ansible.builtin.import_role:
+        name: 'debops.debops.cron'
       tags: [ 'role::cron', 'skip::cron' ]
 
-    - role: logrotate
+    - name: Configure logrotate service
+      ansible.builtin.import_role:
+        name: 'debops.debops.logrotate'
       tags: [ 'role::logrotate', 'skip::logrotate' ]
-      logrotate__dependent_config:
-        - '{{ php__logrotate__dependent_config }}'
 
-    - role: php
+    - name: Install and configure PHP runtime environment
+      ansible.builtin.import_role:
+        name: 'debops.debops.php'
       tags: [ 'role::php', 'skip::php' ]
