--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Clone the repository
         uses: 'actions/checkout@v3'
 
-      - name: Setup upterm session
-        uses: 'lhotari/action-upterm@v1'
-
       - name: Run ansible-lint from main branch
         uses: 'ansible-community/ansible-lint-action@main'
+
+      - name: Setup upterm session
+        if: always()
+        uses: 'lhotari/action-upterm@v1'
